src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employees (Employee)</relationshipLabel>
        <relationshipName>Employees2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employees (Mentor)</relationshipLabel>
        <relationshipName>Employees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employees (Trainer)</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>